--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.jpa.hibernate.ddl-auto=create-drop
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
